archive/nix/snix/snix/nix-compat-derive-tests/tests/ui/deserialize_bad_type.stderr
error[E0277]: the trait bound `BadType: NixDeserialize` is not satisfied
 --> tests/ui/deserialize_bad_type.rs:7:14
  |
7 |     version: BadType,
  |              ^^^^^^^ the trait `NixDeserialize` is not implemented for `BadType`
  |
  = help: the following other types implement trait `NixDeserialize`:
            AddToStoreNarRequest
            BTreeMap<K, V>
            CAHash
            ClientSettings
            IgnoredZero
            NarHash
            Operation
            Option<CAHash>
          and $N others
note: required by a bound in `try_read_value`
 --> $WORKSPACE/nix-compat/src/wire/de/mod.rs
  |
  |     fn try_read_value<V: NixDeserialize>(
  |                          ^^^^^^^^^^^^^^ required by this bound in `NixRead::try_read_value`
